Bug 471060 - Filesystem sidebar context menu / Open with / [App] shows Choose Application dialog
Summary: Filesystem sidebar context menu / Open with / [App] shows Choose Application ...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-15 05:29 UTC by Grósz Dániel
Modified: 2023-08-08 20:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grósz Dániel 2023-06-15 05:29:38 UTC
SUMMARY
If I try to open a file with a different application (or a directory with a file manager) using the Filesystem sidebar's context menu, it asks what application I want to open it with (as if I clicked Open With/Other) even if I've already clicked on an application.

STEPS TO REPRODUCE
1. In the Filesystem panel, right click on a file, directory, or the empty space below the icons.
2. In Open With, click on an application.

OBSERVED RESULT
Shows the Choose Application dialog.

EXPECTED RESULT
Opens the file/directory with the chosen application.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20230613
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.107.0
Qt Version: 5.15.9
Kernel Version: 6.3.7-1-default (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
Works as expected in the Projects and the Documents panels.
Comment 1 Bug Janitor Service 2023-08-08 17:31:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1278
Comment 2 Gary Li 2023-08-08 19:43:45 UTC
Git commit 131b2e42e1456bbc7d3fd9afdba5bf73cc71589a by Gary Li.
Committed on 08/08/2023 at 19:26.
Pushed by cullmann into branch 'master'.

Fix open with in Filesystem view

KateFileActions::showOpenWithMenu expects the desktop path to be given
in the action's data as a string instead of as a StringList.

M  +1    -0    addons/filebrowser/katefilebrowser.cpp

https://invent.kde.org/utilities/kate/-/commit/131b2e42e1456bbc7d3fd9afdba5bf73cc71589a
Comment 3 Christoph Cullmann 2023-08-08 20:06:07 UTC
Thanks to Gary Li for providing a fix! That is the spirit :)