Fix open with in Filesystem view

KateFileActions::showOpenWithMenu expects the desktop path to be given
in the action's data as a string instead of as a StringList.

BUG: 471060